messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging
      version: green
  template:
    metadata:
      labels:
        app: messaging
        version: green
    spec:
      containers:
      - name: messaging-container
        image: dmadiou12/messaging-app:latest  # use a new tag if you want to test changes
        ports:
        - containerPort: 8000
